@@ -729,6 +729,7 @@ t/410.Translate.t
 t/900.publican.t
 t/910.publican.Users_Guide.t
 t/920.WebSite.t
+templates/anchor.tmpl
 templates/books_format_menu.tmpl
 templates/books_index.tmpl
 templates/books_lang_menu.tmpl
@@ -915,4 +916,3 @@ windows/publican2.ico
 xt/author/perlcritic.t
 xt/author/pod-coverage.t
 xt/author/pod.t
-META.json
