@@ -1,16 +1,16 @@
 DocBook 5 support:
 
 Database Updates:
-	889031
-	901560
-	979846
+	889031 - In progress
+	901560 - Need Info
 
 PDF:
-	1006135
-	1007146
-	808041
-	1006796
-	884943
+	1006135 - Need Info
+	808041  - Need Info
+	1006796 - Requires wkhtmltopdf-qt update and testing
+		"9.9. Automating Synchronization"
+		~/Source/dist-git/Red_Hat_Network_Satellite-Installation_Guide-5.5-web-en-US/Red_Hat_Network_Satellite-Installation_Guide-5.5-web-en-US-3
+	884943  - Requires wkhtmltopdf-qt update and testing
 
 *********************************************************
 
