@@ -2,7 +2,7 @@
 <!ENTITY BOOKID "publican">
 <!ENTITY FORMAL-RHI "Red Hat, Inc.">
 <!ENTITY HOLDER "Red Hat, Inc">
-<!ENTITY YEAR "2010">
+<!ENTITY YEAR "2013">
 <!ENTITY D_B "DocBook">
-<!ENTITY PRODUCTNUM "3.3">
+<!ENTITY PRODUCTNUM "4.0">
 
