@@ -2,13 +2,7 @@
 <ul id="book_format_menu_list" class="hidden">
 [%- FOREACH  format = formats %]
     <li>
-     [%- IF format == 'pdf' || format == 'epub' %]
-        <a href="[% host %]/[% book.lang %]/[% book.product %]/[% book.version %]/[%format %]/[% book.book %]/[% book.product %]-[% book.version %]-[% book.book %]-[% book.lang %].[% format %]">[% format %]</a>
-     [%- ELSIF format == 'txt' %]
-        <a href="[% host %]/[% book.lang %]/[% book.product %]/[% book.version %]/[%format %]/[% book.book %]/[% book.book %].[% format %]">[% format %]</a>
-     [%- ELSE %]
-        <a href="[% host %]/[% book.lang %]/[% book.product %]/[% book.version %]/[%format %]/[% book.book %]/index.html">[% format %]</a>
-     [%- END %]
+	[% INCLUDE anchor.tmpl host=host lang=lang booklang=book.lang product=book.product version=book.version format=format book=book.book name=format %]
     </li>
 [%- END %]
 </ul>
