@@ -8,7 +8,7 @@
 <ul id="book_menu_list" class="hidden">
 [%- FOREACH book_name = books %]
   <li [% IF lang != book_list.${book_name}.lang %]class="untranslated [% lang %]"[% END %]>
-        <a href="[% host %]/[% book_list.${book_name}.lang %]/[% product %]/[% book_list.${book_name}.version %]/html/[% book_list.${book_name}.book %]/index.html">[% book_list.${book_name}.book_clean %][% IF lang != book_list.${book_name}.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]</a>
+	[% INCLUDE anchor.tmpl host=host lang=lang booklang=book_list.${book_name}.lang product=product version=book_list.${book_name}.version format=book_list.${book_name}.base_format book=book_list.${book_name}.book name=book_list.${book_name}.book_clean %]
   </li>
 [%- END %]
 </ul>
