@@ -17,7 +17,7 @@
 		</div>
 		[% FOREACH  c_book = i_sort(cur_ver) %][% booker = book_list.${ver}.${c_book} %]
 		<div class="bottom_books[% IF lang != booker.lang %] untranslated [% lang %][% END %]">
-			<a href="[% host %]/[% booker.lang %]/[% booker.product %]/[% booker.version %]/html/[% booker.book %]/index.html">[% booker.book_clean %][% IF lang != booker.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]<span class="subtitle">[% booker.subtitle %]</span></a>
+			[% INCLUDE anchor.tmpl host=host lang=lang booklang=booker.lang product=product version=booker.version format=booker.base_format book=booker.book name=booker.book_clean subtitle=booker.subtitle behind=booker.behind subtitle=booker.subtitle %]
 		</div>
 		[%- END %]
 	</div>
