@@ -44,7 +44,7 @@
 		    [%- END %]
 				[%- FOREACH books %]
 					<div id='[% product %].[% version %].[% book %]' class="book collapsed">
-						<a href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a>
+						<a href="[% product %]/[% version %]/[% base_format %]/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/[% base_format %]/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a>
 						<span id='[% product %].[% version %].[% book %].types' class="types">
 						[%- FOREACH types %]
 							<a href="[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='./[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]><img src="../images/[% type %].png" /></a>
@@ -58,7 +58,7 @@
 						<div id='[% product %].[% version %].untrans_books' class="books hidden">
 						[%- FOREACH untrans_books %]
 							<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="toggle(event, '[% product %].[% version %].[% book %].types');">
-								<a href="../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
+								<a href="../[% untrans_lang %]/[% product %]/[% version %]/[% base_format %]/[% book %]/index.html" onclick="window.top.location='../[% untrans_lang %]/[% product %]/[% version %]/[% base_format %]/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
 								<span id='[% product %].[% version %].[% book %].types' class="types">
 								[%- FOREACH types %]
 									<a href="../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]><img src="../images/[% type %].png" /></a>
