@@ -48,7 +48,7 @@
 		    [%- END %]
 				[%- FOREACH books %]
 					<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="work=0">
-						<a class="type" href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
+						<a class="type" href="[% product %]/[% version %]/[% base_format %]/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/[% base_format %]/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
 						<div id='[% product %].[% version %].[% book %].types' class="types" onclick="work=0;">
 						[%- FOREACH types %]
 							<a class="type" href="[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='./[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
@@ -62,7 +62,7 @@
 						<div id='[% product %].[% version %].untrans_books' class="books hidden">
 						[%- FOREACH untrans_books %]
 							<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="work=0">
-								<a class="type" href="../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
+								<a class="type" href="../[% untrans_lang %]/[% product %]/[% version %]/[% base_format %]/[% book %]/index.html" onclick="window.top.location='../[% untrans_lang %]/[% product %]/[% version %]/[% base_format %]/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
 								<div id='[% product %].[% version %].[% book %].types' class="types hidden" onclick="work=0;">
 								[%- FOREACH types %]
 									<a class="type" href="../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
