@@ -12,7 +12,7 @@
   <div class="bottom_versions">
 [% FOREACH  booker = book_list %]
     <div class="bottom_books[% IF lang != booker.value.lang %] untranslated [% lang %][% END %]">
-      <a href="[% host %]/[% booker.value.lang %]/[% product %]/[% version %]/html/[% booker.value.book %]/index.html">[% booker.value.book_clean %][% IF lang != booker.value.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]<span class="subtitle">[% booker.value.subtitle %]</span></a>
+      [% INCLUDE anchor.tmpl host=host lang=lang booklang=booker.value.lang product=product version=booker.value.version format=booker.value.base_format book=booker.value.book name=booker.value.book_clean subtitle=booker.value.subtitle %]
     </div>
 [%- END %]
   </div>
