@@ -10,6 +10,7 @@ NEXT UNRELEASED
 - Fix keyword lable showing in PDF when there are no keywords. BZ #1007146
 - Indicate whether a translation is older in the web GUI. BZ #889031
 - Include time in update_date. BZ #979846 
+- Support web site navigation for books without HTML. BZ #885916
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
